--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <h1>LOGIN</h1> 
     <title> </title>
 </head>
 <body>
-    HEllo world 
-    hrllo 
+   Username:<input type="text"><br><br>
+   Password:<input type="password"><br><br>
+   <button>LOGIN</button>
     
 </body>
 </html>
